--- a/client/src/components/InputField/InputField.css
+++ b/client/src/components/InputField/InputField.css
@@ -5,12 +5,14 @@
   position: relative;
 }
 .input {
+  height: 50px;
   width: 100%;
   padding: 15px 12px;
   margin-bottom: 5px;
-  border: 2px solid rgba(54, 0, 54, 0.4);
-  background: #ffffff;
-  color: #555;
+  /* border: 2px solid rgba(54, 0, 54, 0.4); */
+  border: none;
+  background: #dcdcdc;
+  color: #5e5e5e;
   border-radius: 4px;
   box-shadow: 0px 1px 1.1px hsl(var(--shadow-color) / 0.13),
     0px 2.9px 3px -1px hsl(var(--shadow-color) / 0.12),
@@ -42,23 +44,21 @@ input::placeholder {
 .input:focus,
 input:hover {
   outline: none;
-  border-color: rgba(54, 0, 54, 0.4);
-  background-color: #fff;
-  box-shadow: 0px 1px 1.1px hsl(var(--shadow-color) / 0.13),
-    0px 2.9px 3px -1px hsl(var(--shadow-color) / 0.12),
-    -0.1px 7.7px 8.1px -2px hsl(var(--shadow-color) / 0.11),
-    -0.2px 19.6px 20.6px -3px hsl(var(--shadow-color) / 0.1);
+  border: 2px solid rgba(54, 0, 54, 0.4);
 }
 
 .visibility {
   position: absolute;
   right: 20px;
-  top: 50%;
+  top: 63%;
   transform: translateY(-50%);
   width: 30px;
   height: 30px;
-  background: #8b2592;
+  background: #957d95;
   border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   cursor: pointer;
   border: none;
   margin: 0 auto;
